Fixed poll-related overflow issues

--- a/wcfsetup/install/files/style/poll.less
+++ b/wcfsetup/install/files/style/poll.less
@@ -64,8 +64,8 @@
 			padding: 2px 0;
 			
 			.optionName {
-				display: inline-block;
-				padding: 0 2.5em 0 @wcfGapSmall;
+				display: block;
+				padding: 0 3.5em 0 @wcfGapSmall;
 			}
 			
 			.relativeVotes {
